--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,8 +42,9 @@ dependencies:
   timezone: ^0.8.0
   http: ^0.13.4
   flutter_datetime_picker: ^1.5.1
-  path: ^1.8.2
+  path: ^1.8.1
   sqflite: ^2.0.3
+  rxdart: ^0.27.5
 
   
 
