--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.17.3 <3.0.0"
+  sdk: ">=2.16.1 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -34,30 +34,27 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  lottie: ^1.3.0
-  animated_bottom_navigation_bar: ^1.0.1
-  google_fonts: ^3.0.1
-  get: ^4.6.5
+  lottie: any
+  animated_bottom_navigation_bar: any
+  google_fonts: any
+  get: any
   flutter_local_notifications: ^9.7.0
   timezone: ^0.8.0
   http: ^0.13.4
   flutter_datetime_picker: ^1.5.1
   path: ^1.8.1
-  sqflite: ^2.0.3
+  sqflite: any
   rxdart: ^0.27.5
 
   
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
